--- a/Makefile.dist
+++ b/Makefile.dist
@@ -24,7 +24,7 @@
 # https://www.gnu.org/software/make/manual/html_node/Wildcard-Function.html
 # https://www.gnu.org/software/make/manual/make.html#Variables_002fRecursion
 # https://lithic.tech/blog/2020-05/makefile-dot-env
-include .env
+include ./.env
 export
 
 # Detect a Docker environment.
