--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,7 @@ verify_ssl = true
 
 [dev-packages]
 # Tools.
-pre-commit = "~=2.10"
+pre-commit = "~=2.13"
 
 [requires]
-python_version = "3.9"
+python_version = "*"
