--- a/Makefile.dist
+++ b/Makefile.dist
@@ -109,7 +109,7 @@ docker.up.prod.no-debug.no-volume.serve:
 	docker-compose --file docker-compose.yml --file docker/docker-compose.prod.yml --file docker/docker-compose.no_debug.yml --file docker/docker-compose.serve_prod.yml --file docker/docker-compose.db_name_prod.yml up web
 
 ## Stop.
-docker.down.prod.no-debug.no-volume.serve:
+docker.down.prod.no-debug.no-volume:
 	docker-compose --file docker-compose.yml --file docker/docker-compose.prod.yml --file docker/docker-compose.no_debug.yml --file docker/docker-compose.serve_prod.yml --file docker/docker-compose.db_name_prod.yml down
 
 ## Shell.
@@ -134,7 +134,7 @@ docker.serve.dev: serve-dev
 # Production.
 docker.init.prod: migrations migrate collectstatic docker.gen-superuser.dev syncdb initialize-translations compile-translations check
 
-docker.serve.prod: serve-production
+docker.serve.prod: collectstatic serve-production
 
 ###################
 # Bare metal only #
@@ -215,7 +215,7 @@ serve-dev:
 # serve-production:
 #	DEBUG="False" uwsgi --chdir=${CURDIR} --module=$(PROJECT_NAME).wsgi:application --env DJANGO_SETTINGS_MODULE=$(PROJECT_NAME).settings --master --pidfile=/run/project-master.pid --processes=5 --harakiri=20 --max-requests=5000 --vacuum --http=0.0.0.0:3050 --check-static ${CURDIR}
 serve-production:
-	$(COMMAND_PREFIX) uwsgi --chdir=${CURDIR} --module=$(PACKAGE_NAME).wsgi:application --env DJANGO_SETTINGS_MODULE=$(PACKAGE_NAME).settings --master --pidfile=/tmp/project-master.pid --http=0.0.0.0:3050 --processes=5 --uid=1019 --gid=1019 --harakiri=20 --max-requests=5000 --vacuum --check-static ${CURDIR}
+	$(COMMAND_PREFIX) uwsgi --chdir=${CURDIR} --module=$(PACKAGE_NAME).wsgi:application --env DJANGO_SETTINGS_MODULE=$(PACKAGE_NAME).settings --master --pidfile=/tmp/project-master.pid --http=0.0.0.0:3050 --processes=5 --uid=1019 --gid=1019 --post-buffering --harakiri=20 --max-requests=5000 --vacuum --enable-threads --check-static ${CURDIR}
 
 check:
 	$(COMMAND_PREFIX) python3 manage.py check --fail-level INFO
