--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,11 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+    -   id: destroyed-symlinks
+    -   id: detect-private-key
+    -   id: check-ast
+    -   id: check-case-conflict
+    -   id: debug-statements
 
 -  repo: https://github.com/frnmst/md-toc
    rev: '8.0.0'  # or a specific git tag from md-toc
